--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,26 @@
             max-width: 800px;
             margin: 0 auto;
         }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            color: #007acc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        small {
+            color: #666;
+        }
+        h1.post-title {
+            text-align: center; /* Center-align the post title */
+        }
     </style>
     <script>
     MathJax = {
