--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,7 @@
         <p>{{ site.description }}</p>
     </header>
     <main>
+        <h1 class="post-title">{{ page.title }}</h1>
         {{ content }}
     </main>
 </body>
